# cognitive-lens

./: .gitignore  README.md  main.py  pyproject.toml  text.2137
backend/: .flake8  .gitignore  README.md  main.py  pyproject.toml  settings.py
backend/src/: main.py  settings.py
backend/src/cognitive_lens_be/agents/: judge_abstract.py  judge_contextual_analyzer.py  judge_creative_thinker.py  judge_detail_oriented.py  supervising_agent.py
backend/src/cognitive_lens_be/enums/: app.py
backend/src/cognitive_lens_be/model/: conversation_message.py  message.py  result_messages.py
backend/src/cognitive_lens_be/node_service/: __init__.py  node_service.py
backend/src/cognitive_lens_be/routers/v1/: run_node.py
backend/src/cognitive_lens_be/routers/v1/schema/: execution_result.py  node.py
backend/src/cognitive_lens_be/utils/: logger.py  misc.py
backend/src/routers/: __init__.py
backend/src/routers/v1/: __init__.py
backend/src/utils/: logger.py
frontend/: .gitignore  README.md  package-lock.json
frontend/src/cases/: mental_health.js
frontend/src/components/: ApiControls.tsx  Block.tsx  ConversationBlock.tsx  SOAPBlock.tsx  StateBlock.tsx  TextBlock.tsx  TextBox.tsx  TextContainer.tsx  ThinkingContainer.tsx
frontend/src/pages/: index.tsx
frontend/src/styles/: Block.module.css  Boxes.module.css  Conversation.module.css  Home.module.css  SOAPBlock.module.css  State.module.css  TextBlock.module.css  TextContainer.module.css  ThinkingContainer.module.css  globals.css
frontend/src/utils/: api.ts  constants.ts  llm.ts
