[project]
name = "cognitive-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "certifi>=2025.4.26",
    "fastapi[standard]>=0.115.12",
    "litellm>=1.71.3",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]
